// Copyright (C) 2018 Storj Labs, Inc.
// See LICENSE for copying information.

syntax = "proto3";
option go_package = "pb";

package streams;

message SegmentMeta {
    bytes encrypted_key = 1;
    bytes key_nonce = 2;
}

message StreamInfo {
    int64 number_of_segments = 1;
    int64 segments_size = 2;
    int64 last_segment_size = 3;
    bytes metadata = 4;
}

message StreamMeta {
    bytes encrypted_stream_info = 1;
    int32 encryption_type = 2;
    int32 encryption_block_size = 3;
    SegmentMeta last_segment_meta = 4;
}
